# TunneLLM

./: .env.example  .gitignore  GUIDA.md  README.md
local/: config.py  dashboard.html  download_and_deploy.ps1  main.py  metrics.py  pyproject.toml  request_log.py  requirements.txt  server.py  test_airllm_server.py  transfer_model.ps1  tunnel.py
remote/: Modelfile  ollama_job.sh  requirements.txt  setup.sh  start_server.sh
