[project]
name = "tunnelmm"
version = "0.1.0"
description = "A proxy for Ollama models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "sshtunnel>=0.4.0",
    "paramiko>=3.0,<4.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
