[project]
name = "tunnelmm"
version = "0.1.0"
description = "A proxy for Ollama models"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "sshtunnel>=0.4.0",
    "paramiko>=3.0,<4.0",
    "pydantic-settings>=2.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "server", "tunnel", "config", "metrics", "request_log"]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]
